Thursday 14 January 2010 (1:15:30 PM)
    - load balance checks if particles change during a load balance iteration.
      if not - load balancing iterations are stopped.
    - dummy solver added to serial_code_timing.py in the repo.
Tuesday 19 January 2010 (11:59:22 PM)
    - load balance component added.
    - some timing measurement code for report.
Monday 01 February 2010 (01:07:30 PM)
    - Use of Python c-api functions in many low-level modules.
    - cythonizing of parallel cell module.
    - removed debug calls in parallel cell modules (both cython and python).
    - Added code to perform load balancing initially in the parallel timing modules.
    - Cythonized parallel controller.
Tuesday 02 February 2010 (01:24:44 PM)
    - insert_particles function changed to use PyDict_functions.
Wednesday 03 February 2010 (02:47:31 PM)
    - pickling routines for carrays and tests.
    - optimized routines for neighbor particle exchange in the
    cy_parallel_cell_manager module.
Saturday 06 February 2010 (02:18:13 PM)
    - Cleanup before uploading on google:
        - entity filtering based on entity names disabled due to lack to concrete
    	idea about the same.
	- information dict stuff removed from all components except integrator.
    - Typo in sph/pressure_funcs.pyx resolved.
    - carray generation files moved to pysph/base
Saturday 06 February 2010 (05:08:32 PM)
    - removed misc directory
Saturday 06 February 2010 (05:12:28 PM)
    - moved examples to root.
Monday 08 February 2010 (01:31:45 PM)
    - better indentation in cy_parallel_cell_manager.
    - command line option to - write vtk files and choose largest cell size for
    parallel cell manager.
Monday 08 February 2010 (01:44:29 PM)
    - typo in update_property_requirements function of parallel_component
    removed. 
    - error in update_property_requirements of parallel_vtk_writer resolved.
Monday 08 February 2010 (01:52:30 PM)
    - added "build" directory to .hgignore